2008-11-17  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added back the appointment update notification
	templates from RC8 and updated them.
	* SoObjects/Appointments/SOGoAppointmentFolder.m
	Greatly improved the speed of getetag calls
	* SoObjects/SOGo/SOGoGCSFolder.m
	We now allow multiple users subscribe/unsubscribe
	requests during one DAV call.

2008-11-13  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	We now remove the SENT-BY when updating attendees
	if it's the attendee himself that changes his
	particpation status
	* SoObjects/SOGo/SOGoUserFolder.m
	Improve the comparison of strings by rather using
	URL objects.
	* SOPE/NGCards/CardVersitRenderer.m
	We now properly quote attribute values if they
	contain an ':' in them
	* SoObjects/Appointments/iCalPerson+SOGo.m
	Fixed the check for quoted SENT-BY
	* Updated the iCal invitation replies to take
	the SENT-BY into account.

2008-11-11  Ludovic Marcotte  <lmarcotte@inverse.ca>
	
	* Fixed a couple of issues in the new pref caching
	  subsystem.
	* Cleaned up the caching code and activated
	  distributed notifications by default.

2008-10-29  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([-userDefaults]): added support for
	system-wide defaults for ReplyPlacement, SignaturePlacement,
	MessageForwarding, and MessageCheck.

2008-10-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoMailer.m ([SOGoMailer
	-sendMailData:datatoRecipients:recipientssender:sender]): don't
	HELO the server after connecting, since the connectToHost: method
	already has "EHLO"'d it after the connection was established.

	* UI/MailerUI/UIxMailMainFrame.m ([-quotaSupport]): removed
	useless method.

	* SoObjects/SOGo/NSArray+Utilities.m ([NSArray
	-objectsForKey:keynotFoundMarker:marker]): added a
	"notFoundMarker:" parameter to the "objectsForKey:" method. When
	the marker is nil and no match is found in the current dictionary,